# deai

./: .env  .gitignore  Dockerfile  FEATURES.md  Procfile  client.py  devserver.sh  docker-compose.yml  entrypoint.sh  grpc_client_example.py  hardhat.config.js  package-lock.json  package.json  requirements.txt  run_worker.sh  sdk_example.py  sdk_test.py
.github/workflows/: deploy-node-engine.yml  deploy-web-client.yml
.idx/: dev.nix
cache/: solidity-files-cache.json
cli/: deai_cli.py
contracts/: APIKeyManager.sol  AuditLog.sol  Billing.sol  DAO.sol  DeAIToken.sol  Governance.sol  GovernanceToken.sol  ModelMarketplace.sol  PrivateSubnet.sol  QuadraticVoting.sol  Reputation.sol  RewardDistribution.sol  SLA.sol  Staking.sol  Treasury.sol
core/client/: package-lock.json  package.json
core/node/: package-lock.json  package.json
frontend/: package-lock.json  package.json
infra/: .env.template  docker-compose.monitoring.yml  docker-compose.yml  gateway.Dockerfile  node-engine.Dockerfile  prometheus.yml
scripts/: deploy-api-key-manager.js  deploy-audit-log.js  deploy-billing.js  deploy-dao.js  deploy-governance-token.js  deploy-governance.js  deploy-private-subnet.js  deploy-quadratic-voting.js  deploy-reputation.js  deploy-sla.js  deploy-treasury.js  deploy.js
sdk/: README.md  example.py  pyproject.toml
sdk/deai_sdk/: __init__.py  abi.py  client.py  exceptions.py  models.py
sdk/deai_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/src/deai_sdk/: __init__.py  client.py
web-client/: Dockerfile  app.py  requirements.txt
(+100 files in other folders)
