[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deai-sdk"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
description = "The official Python SDK for the DeAI network."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "websocket-client>=1.2.0",
    "web3>=6.15.1",
    "eth-account>=0.11.0",
    "python-dotenv>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/your-repo/deai-sdk"
"Bug Tracker" = "https://github.com/your-repo/deai-sdk/issues"
